# EQQuarmCompanion

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PRODUCT.md  vcpkg.json
.github/: aqt-settings.ini
.github/workflows/: ci.yml
db_export/: CMakeLists.txt  main.cpp  schema_introspect.cpp  schema_introspect.h  table_copier.cpp  table_copier.h
docs/: formules-calcul-stats-et-stacking.md  functional-documentation.md
docs/plans/: 2026-05-16-cpp-rewrite-plan1-bootstrap.md  2026-05-16-cpp-rewrite-plan2-core.md  2026-05-16-cpp-rewrite-plan3-db.md  2026-05-16-cpp-rewrite-plan4-ui-character.md  2026-05-16-cpp-rewrite-plan5-fight-tab.md  2026-05-16-cpp-rewrite-plan6-infos-spells-packaging.md  2026-05-20-evolutions-fight-infos.md  2026-05-21-evolutions-stuff-fight-buffs.md  2026-07-13-embedded-sqlite-db-plan.md
docs/specs/: 2026-04-26-eq-item-evaluator-design.md  2026-05-02-spells-tab-design.md  2026-05-03-stats-categorization-design.md  2026-05-10-spell-stacking-design.md  2026-05-13-fight-tab-design.md  2026-05-16-cpp-rewrite-design.md  2026-07-13-embedded-sqlite-db-design.md
docs/sql_migrations/: add_fulltext_indexes.sql
docs/superpowers/plans/: 2026-05-29-global-loot-survival-range-integration-tests.md  2026-06-03-installer.md  2026-06-08-bis-highlight.md
docs/superpowers/specs/: 2026-05-29-global-loot-survival-range-integration-tests-design.md  2026-06-03-installer-design.md  2026-06-08-bis-highlight-design.md
installer/: build_installer.ps1  eqquarmcompanion.iss
resources/: app.rc.in  config_defaults.json  resources.qrc
src/: main.cpp
src/core/: character_parser.cpp  character_parser.h  config.cpp  config.h  derived_metrics.cpp  derived_metrics.h  equipped_effects.cpp  equipped_effects.h  npc_analysis.cpp  npc_analysis.h  spell_stacking.cpp  spell_stacking.h  spell_stats.cpp  spell_stats.h  stats_calculator.cpp  stats_calculator.h  types.h
src/db/: bis_scraper.cpp  bis_scraper.h  db_connection.cpp  db_connection.h  item_database.cpp  item_database.h  npc_database.cpp  npc_database.h
src/ui/: character_tab.cpp  character_tab.h  character_tab_internal.h  character_tab_tooltip.cpp  fight_tab.cpp  fight_tab.h  infos_data.h  infos_spell_data.h  infos_tab.cpp  infos_tab.h  item_card.cpp  item_card.h  item_tooltip.cpp  item_tooltip.h  main_window.cpp  main_window.h  palette.h  settings_dialog.cpp  settings_dialog.h  spell_tooltip.cpp  spell_tooltip.h  spells_tab.cpp  spells_tab.h  stat_categories.h  stats_bar.cpp  stats_bar.h  ui_helpers.h  widgets.cpp  widgets.h
tests/: CMakeLists.txt  test_character_parser.cpp  test_config.cpp  test_integration_npc.cpp  test_npc_analysis.cpp  test_spell_stacking.cpp  test_spell_stats.cpp  test_stats_calculator.cpp
